Squash a bunch of workflow test builds

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,61 +1,80 @@
 name: .NET 5 CI
-on:
-  push:
-    paths: ./src/**
+on: [push, workflow_dispatch]
 
-jobs:
+jobs:        
   Build:
     runs-on: ${{ matrix.os }}
-    steps:
+    steps: 
+      # Download repo
       - uses: actions/checkout@v2
+      
+      # Update submodules
+      - name: Update submodules
+        run: git submodule update --init
+        
+      # Setup dotnet
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.401'
-          
-      - name: Build solution
-        run: |
-          git submodule update --init
-          dotnet build ./src -o ./bin
+          dotnet-version: '5.0.401'    
+              
+      # Get CMake
+      - name: Get CMake
+        uses: lukka/get-cmake@v3.21.2
         
-      - name: Post build
+      # Setup MSBuild
+      - name: Setup MSBuild
+        if: ${{ runner.os }} == "Windows"
+        uses: microsoft/setup-msbuild@v1.0.3
+          
+      # Download src artifact
+      - name: Download src artifact
+        uses: actions/download-artifact@v2.0.10
+        with:
+          name: "src"
+          path: ./src  
+
+      # CMake Asar project
+      - name: Cmake asar
+        run: |
+          cmake -S ./src/Asar/src -B ./src/Asar/out
+          cd ./src/Asar/out/asar
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            msbuild asar.vcxproj
+            cd ../../../../
+            cp ./src/Asar/out/asar/Debug/asar.dll ./bin/asar.dll
+          else
+            make
+            cd ../../../../
+            if [ "$RUNNER_OS" == "Linux" ]; then
+              cp ./src/Asar/out/asar/libasar.so ./bin/libasar.so
+            elif [ "$RUNNER_OS" == "macOS" ]; then
+              cp ./src/Asar/out/asar/libasar.dylib ./bin/libasar.dylib
+            fi
+          fi
+      
+      # Build solution
+      - name: Build solution
+        run: dotnet build ./src/MOLE.sln -o ./bin
+        
+      # Copy cimgui to output
+      - name: Copy cimgui
         shell: bash
         run: |
           if [ "$RUNNER_OS" == "Windows" ]; then
             cp "./src/ImGui.NET/deps/cimgui/win-x64/cimgui.dll" "./bin/cimgui.dll"
-            rm "./bin/libasar.so" "./bin/libasar.dylib"
           elif [ "$RUNNER_OS" == "Linux" ]; then
             cp "./src/ImGui.NET/deps/cimgui/linux-x64/cimgui.so" "./bin/cimgui.so"
-            rm "./bin/asar.dll" "./bin/libasar.dylib"
           elif [ "$RUNNER_OS" == "macOS" ]; then
             cp "./src/ImGui.NET/deps/cimgui/osx-x64/cimgui.dylib" "./bin/cimgui.dylib"
-            rm "./bin/asar.dll" "./bin/libasar.so"
           fi
-        
+      
+      # Upload build artifacts to github
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2.2.4
         with:
-        # Artifact name
           name: ${{ runner.os }}
           path: ./bin
-        
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        
-  Test:
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: '5.0.401'
-          
-      - name: Run unit tests
-        run: |
-          git submodule update --init
-          dotnet test ./src
         
     strategy:
       matrix:
