--- a/src/MOLE/Properties/launchSettings.json
+++ b/src/MOLE/Properties/launchSettings.json
@@ -2,8 +2,7 @@
   "profiles": {
     "Back": {
       "commandName": "Project",
-      "commandLineArgs": "cleanU.smc",
-      "workingDirectory": "C:\\Users\\high\\Downloads\\Documents\\SMW"
+      "nativeDebugging": true
     }
   }
 }
