--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,6 +24,7 @@ jobs:
 
       # CMake Asar project
       - name: Cmake asar
+        shell: bash
         run: |
           mkdir ./bin
           cmake -S ./src/Asar/src -B ./src/Asar/out
