ubunut != ubuntu asshat -_-

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -3,7 +3,7 @@ on: [push, workflow_dispatch]
 
 jobs:        
   Linux:
-    runs-on: ubunut-latest
+    runs-on: ubuntu-latest
     steps: 
       # Download repo
       - uses: actions/checkout@v2
