--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -96,7 +96,7 @@ jobs:
       - name: Upload build artifacts
         uses: actions/upload-artifact@v2.2.4
         with:
-          name: Wwindows
+          name: Windows
           path: ./bin
           
   MacOS:
