--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,7 @@ on: [push, workflow_dispatch]
 jobs:        
   Linux:
     runs-on: ubuntu-latest
+    if: ${{ !contains(github.event.head_commit.message, '[ci-skip]') &&  !contains(github.event.head_commit.message, '[linux-skip]')}}
     steps: 
       # Download repo
       - uses: actions/checkout@v2
@@ -52,6 +53,7 @@ jobs:
           
   Windows:
     runs-on: windows-latest
+    if: ${{ !contains(github.event.head_commit.message, '[ci-skip]') &&  !contains(github.event.head_commit.message, '[windows-skip]')}}
     steps: 
       # Download repo
       - uses: actions/checkout@v2
@@ -100,6 +102,7 @@ jobs:
           path: ./bin
           
   MacOS:
+    if: ${{ !contains(github.event.head_commit.message, '[ci-skip]') &&  !contains(github.event.head_commit.message, '[macos-skip]')}}
     runs-on: macos-latest
     steps: 
       # Download repo
