--- a/.github/workflows/super-linter.yml
+++ b/.github/workflows/super-linter.yml
@@ -6,7 +6,16 @@
 # https://github.com/github/super-linter
 name: Lint Code Base
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  workflow_dispatch:
+    inputs:
+      validateall:
+        description: 'Validate all files or just changes'
+        required: true
+        default: 'false'
+    
+  push:
+  pull_request: 
 jobs:
   Lint:
     if: ${{ !contains(github.event.head_commit.message, '[lint-skip]') }}
@@ -21,7 +30,7 @@ jobs:
       - name: Lint Code Base
         uses: github/super-linter@v4
         env:
-          VALIDATE_ALL_CODEBASE: false
+          VALIDATE_ALL_CODEBASE: ${{ contains(github.event.inputs.validateall, 'true') }}
           DEFAULT_BRANCH: master
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           FILTER_REGEX_INCLUDE: src/.*
