--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,10 +1,15 @@
-name: Build CI
+name: Build MOLE
 on: [push, pull_request, workflow_dispatch]
 
 jobs:        
   Linux:
+    if: 
+      ${{
+          contains(github.event.head_commit.message, '[linux-only') ||
+          !contains(github.event.head_commit.message, '[linux-skip]') ||
+          !contains(github.event.head_commit.message, '[ci-skip]')
+      }}
     runs-on: ubuntu-latest
-    if: ${{ !contains(github.event.head_commit.message, '[ci-skip]') &&  !contains(github.event.head_commit.message, '[linux-skip]')}}
     steps: 
       # Download repo
       - uses: actions/checkout@v2
@@ -52,8 +57,13 @@ jobs:
           path: ./bin
           
   Windows:
+    if: 
+      ${{
+          contains(github.event.head_commit.message, '[windows-only') ||
+          !contains(github.event.head_commit.message, '[windows-skip]') ||
+          !contains(github.event.head_commit.message, '[ci-skip]')
+      }}
     runs-on: windows-latest
-    if: ${{ !contains(github.event.head_commit.message, '[ci-skip]') &&  !contains(github.event.head_commit.message, '[windows-skip]')}}
     steps: 
       # Download repo
       - uses: actions/checkout@v2
@@ -102,7 +112,12 @@ jobs:
           path: ./bin
           
   MacOS:
-    if: ${{ !contains(github.event.head_commit.message, '[ci-skip]') &&  !contains(github.event.head_commit.message, '[macos-skip]')}}
+    if: 
+      ${{
+          contains(github.event.head_commit.message, '[macos-only') ||
+          !contains(github.event.head_commit.message, '[macos-skip]') ||
+          !contains(github.event.head_commit.message, '[ci-skip]')
+      }}
     runs-on: macos-latest
     steps: 
       # Download repo
