--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,11 +4,12 @@ on: [push, pull_request, workflow_dispatch]
 jobs:        
   Linux:
     if: 
-      ${{
-          contains(github.event.head_commit.message, '[linux-only') ||
-          !contains(github.event.head_commit.message, '[linux-skip]') ||
-          !contains(github.event.head_commit.message, '[ci-skip]')
-      }}
+      ${{!(
+        contains(github.event.head_commit.message, '[windows-only]') ||
+        contains(github.event.head_commit.message, '[macos-only]' ||
+        contains(github.event.head_commit.message, '[linux-skip]') ||
+        contains(github.event.head_commit.message, '[ci-skip]')
+      )}}
     runs-on: ubuntu-latest
     steps: 
       # Download repo
@@ -58,11 +59,12 @@ jobs:
           
   Windows:
     if: 
-      ${{
-          contains(github.event.head_commit.message, '[windows-only') ||
-          !contains(github.event.head_commit.message, '[windows-skip]') ||
-          !contains(github.event.head_commit.message, '[ci-skip]')
-      }}
+      ${{!(
+        contains(github.event.head_commit.message, '[linux-only]') ||
+        contains(github.event.head_commit.message, '[macos-only]' ||
+        contains(github.event.head_commit.message, '[windows-skip]') ||
+        contains(github.event.head_commit.message, '[ci-skip]')
+      )}}
     runs-on: windows-latest
     steps: 
       # Download repo
@@ -113,11 +115,12 @@ jobs:
           
   MacOS:
     if: 
-      ${{
-          contains(github.event.head_commit.message, '[macos-only') ||
-          !contains(github.event.head_commit.message, '[macos-skip]') ||
-          !contains(github.event.head_commit.message, '[ci-skip]')
-      }}
+      ${{!(
+        contains(github.event.head_commit.message, '[windows-only]') ||
+        contains(github.event.head_commit.message, '[linux-only]' ||
+        contains(github.event.head_commit.message, '[macos-skip]') ||
+        contains(github.event.head_commit.message, '[ci-skip]')
+      )}}
     runs-on: macos-latest
     steps: 
       # Download repo
