--- a/src/Mole.Gui/Mole.Gui.csproj
+++ b/src/Mole.Gui/Mole.Gui.csproj
@@ -15,10 +15,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ImGui.NET\src\ImGui.NET\ImGui.NET.csproj" />
-    <ProjectReference Include="..\MOLE\MOLE.csproj" />
-    <ProjectReference Include="..\VeldridController\VeldridController.csproj" />
-    <ProjectReference Include="..\XNAController\XNAController.csproj" />
+    <ProjectReference Include="..\Mole.Shared\Mole.Shared.csproj" />
+    <ProjectReference Include="..\Mole.Veldrid\Mole.Veldrid.csproj" />
+    <ProjectReference Include="..\Mole.MonoGame\Mole.MonoGame.csproj" />
   </ItemGroup>
 
 </Project>
