--- a/src/Mole.Shared/Mole.Shared.csproj
+++ b/src/Mole.Shared/Mole.Shared.csproj
@@ -3,16 +3,14 @@
   <PropertyGroup>
     <OutputType>Library</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>MOLE</RootNamespace>
-    <StartupObject></StartupObject>
-    <AssemblyName>LibMole</AssemblyName>
+    <RootNamespace>Mole.Shared</RootNamespace>
+    <AssemblyName>Mole.Shared</AssemblyName>
     <ApplicationIcon />
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <PlatformTarget>x64</PlatformTarget>
-    <DocumentationFile></DocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
@@ -20,13 +18,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LZMA-SDK" Version="19.0.0" />
     <PackageReference Include="NLog" Version="5.0.0-preview.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <None Update="empty.asm">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
   </ItemGroup>
 
 </Project>
