[linux-only][lint-skip] Updated build.yaml

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ jobs:
     if: 
       ${{!(
         contains(github.event.head_commit.message, '[windows-only]') ||
-        contains(github.event.head_commit.message, '[macos-only]' ||
+        contains(github.event.head_commit.message, '[macos-only]') ||
         contains(github.event.head_commit.message, '[linux-skip]') ||
         contains(github.event.head_commit.message, '[ci-skip]')
       )}}
