--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,12 +8,14 @@ on:
 jobs:
   LinuxTest:
     if: 
-      ${{!(
-        contains(github.event.head_commit.message, '[windows-only]') ||
-        contains(github.event.head_commit.message, '[macos-only]' ||
-        contains(github.event.head_commit.message, '[linux-skip]') ||
-        contains(github.event.head_commit.message, '[ci-skip]')
-      )}}
+      ${{ 
+        !(
+          contains(github.event.head_commit.message, '[windows-only]') ||
+          contains(github.event.head_commit.message, '[macos-only]') ||
+          contains(github.event.head_commit.message, '[linux-skip]') ||
+          contains(github.event.head_commit.message, '[ci-skip]')
+        )
+        }}
     runs-on: ubuntu-latest
     steps: 
       # Download repo
@@ -56,12 +58,14 @@ jobs:
 
   Windows:
     if: 
-      ${{!(
-        contains(github.event.head_commit.message, '[linux-only]') ||
-        contains(github.event.head_commit.message, '[macos-only]' ||
-        contains(github.event.head_commit.message, '[windows-skip]') ||
-        contains(github.event.head_commit.message, '[ci-skip]')
-      )}}
+      ${{ 
+        !(
+          contains(github.event.head_commit.message, '[linux-only]') ||
+          contains(github.event.head_commit.message, '[macos-only]') ||
+          contains(github.event.head_commit.message, '[windows-skip]') ||
+          contains(github.event.head_commit.message, '[ci-skip]')
+        )
+        }}
     runs-on: windows-latest
     steps: 
       # Download repo
@@ -107,12 +111,14 @@ jobs:
 
   MacOS:
     if: 
-      ${{!(
-        contains(github.event.head_commit.message, '[windows-only]') ||
-        contains(github.event.head_commit.message, '[linux-only]' ||
-        contains(github.event.head_commit.message, '[macos-skip]') ||
-        contains(github.event.head_commit.message, '[ci-skip]')
-      )}}
+      ${{ 
+        !(
+          contains(github.event.head_commit.message, '[windows-only]') ||
+          contains(github.event.head_commit.message, '[linux-only]') ||
+          contains(github.event.head_commit.message, '[macos-skip]') ||
+          contains(github.event.head_commit.message, '[ci-skip]')
+        )
+        }}
     runs-on: macos-latest
     steps: 
       # Download repo
