--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,9 +1,8 @@
-name: Run unit tests
+name: Test
 on:
   workflow_run:
-    workflows: ["Build MOLE"]
-    types:
-      - completed
+    workflows: ["Build"]
+    types: [completed]
 
 jobs:
   LinuxTest:
