[ci-skip][lint-skip] Updated test.yaml

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,7 +7,8 @@ on:
 jobs:
   LinuxTest:
     if: 
-      ${{ 
+      ${{
+        github.event.workflow_run.conclusion == 'success' &&
         !(
           contains(github.event.head_commit.message, '[windows-only]') ||
           contains(github.event.head_commit.message, '[macos-only]') ||
@@ -28,22 +29,15 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.401'    
-
-      # Get CMake
-      - name: Get CMake
-        uses: lukka/get-cmake@v3.21.2
-
-      # CMake Asar project
-      - name: Cmake asar
-        shell: bash
-        run: |
-          mkdir ./bin
-          cmake -S ./src/Asar/src -B ./src/Asar/out
-          cd ./src/Asar/out/asar
-          make
-          cd ../../../../
-          cp ./src/Asar/out/asar/libasar.so ./bin/libasar.so
+          dotnet-version: '5.0.401'
+      
+      # Download asar artifact to output
+      - name: Download workflow artifact
+        uses: dawidd6/action-download-artifact@v2.15.0
+        with:
+          workflow: 'asar.yaml'
+          name: 'AsarLinux'
+          path: './bin'
 
       # Copy cimgui to output
       - name: Copy cimgui
@@ -57,7 +51,8 @@ jobs:
 
   WindowsTest:
     if: 
-      ${{ 
+      ${{
+        github.event.workflow_run.conclusion == 'success' &&
         !(
           contains(github.event.head_commit.message, '[linux-only]') ||
           contains(github.event.head_commit.message, '[macos-only]') ||
@@ -78,25 +73,15 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.401'    
-
-      # Get CMake
-      - name: Get CMake
-        uses: lukka/get-cmake@v3.21.2
-
-      # Setup MSBuild
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1.0.3
-
-      # CMake Asar project
-      - name: Cmake asar
-        run: |
-          mkdir ./bin
-          cmake -S ./src/Asar/src -B ./src/Asar/out
-          cd ./src/Asar/out/asar
-          msbuild asar.vcxproj
-          cd ../../../../
-          copy ./src/Asar/out/asar/Debug/asar.dll ./bin/asar.dll
+          dotnet-version: '5.0.401'
+      
+      # Download asar artifact to output
+      - name: Download workflow artifact
+        uses: dawidd6/action-download-artifact@v2.15.0
+        with:
+          workflow: 'asar.yaml'
+          name: 'AsarWindows'
+          path: './bin'
 
       # Copy cimgui to output
       - name: Copy cimgui
@@ -110,7 +95,8 @@ jobs:
 
   MacOSTest:
     if: 
-      ${{ 
+      ${{
+        github.event.workflow_run.conclusion == 'success' &&
         !(
           contains(github.event.head_commit.message, '[windows-only]') ||
           contains(github.event.head_commit.message, '[linux-only]') ||
@@ -131,27 +117,20 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.401'    
-
-      # Get CMake
-      - name: Get CMake
-        uses: lukka/get-cmake@v3.21.2
-
-      # CMake Asar project
-      - name: Cmake asar
-        shell: bash
-        run: |
-          mkdir ./bin
-          cmake -S ./src/Asar/src -B ./src/Asar/out
-          cd ./src/Asar/out/asar
-          make
-          cd ../../../../
-          cp ./src/Asar/out/asar/libasar.dylib ./bin/libasar.dylib
+          dotnet-version: '5.0.401'
+          
+      # Download asar artifact to output
+      - name: Download workflow artifact
+        uses: dawidd6/action-download-artifact@v2.15.0
+        with:
+          workflow: 'asar.yaml'
+          name: 'AsarMac'
+          path: './bin'
 
       # Copy cimgui to output
       - name: Copy cimgui
         shell: bash
-        run: cp "./src/ImGui.NET/deps/cimgui/osx-x64/cimgui.dylin" "./bin/cimgui.dylin"
+        run: cp "./src/ImGui.NET/deps/cimgui/osx-x64/cimgui.dylib" "./bin/cimgui.dylib"
 
       # Run unit tests
       - name: Run unit tests
