--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -124,7 +124,7 @@ jobs:
         uses: dawidd6/action-download-artifact@v2.15.0
         with:
           workflow: 'asar.yaml'
-          name: 'AsarMac'
+          name: 'AsarMacOS'
           path: './bin'
 
       # Copy cimgui to output
