--- a/src/Mole.Shared/Mole.Shared.csproj
+++ b/src/Mole.Shared/Mole.Shared.csproj
@@ -34,4 +34,8 @@
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\deps\TerraCompress\src\TerraCompress.csproj" />
+  </ItemGroup>
+
 </Project>
