--- a/src/Mole.Shared/Mole.Shared.csproj
+++ b/src/Mole.Shared/Mole.Shared.csproj
@@ -18,8 +18,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="ImGui.NET" Version="1.78.0" />
     <PackageReference Include="LZMA-SDK" Version="19.0.0" />
-    <PackageReference Include="NLog" Version="5.0.0-preview.2" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
