--- a/src/Mole.MonoGame/Mole.MonoGame.csproj
+++ b/src/Mole.MonoGame/Mole.MonoGame.csproj
@@ -16,5 +16,8 @@
     <ItemGroup>
       <PackageReference Include="ImGui.NET" Version="1.78.0" />
       <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
+      <PackageReference Include="Serilog" Version="2.10.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     </ItemGroup>
 </Project>
